# speechcorpusy

./: .gitignore  LICENSE  README.md  dev.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
corpuspy/: abstract_corpus.py  archive.py  forward.py  interface.py
corpuspy/components/: archive.py  download.py  taudio.py
corpuspy/helper/: contents.py  forward.py
corpuspy/presets/: __init__.py
corpuspy/presets/jvs/: jvs.py
corpuspy/presets/zr19/: zr19.py
speechcorpusy/: __init__.py  interface.py  interface_test.py  loader.py  loader_test.py  presets_test.py
speechcorpusy/components/: archive.py  download.py  taudio.py
speechcorpusy/helper/: adress.py  adress_test.py  contents.py  forward.py
speechcorpusy/presets/: __init__.py
speechcorpusy/presets/act100tsukuyomi/: act100tsukuyomi.py
speechcorpusy/presets/adhoc/: adhoc.py
speechcorpusy/presets/jsut/: jsut.py
speechcorpusy/presets/jvs/: jvs.py
speechcorpusy/presets/librittsr100/: items.py  librittsr100.py
speechcorpusy/presets/lj/: lj.py
speechcorpusy/presets/rhn46zunda/: rhn46zunda.py
speechcorpusy/presets/testcorpus/: testcorpus.py
speechcorpusy/presets/vcc2020/: ids.py  vcc20.py
speechcorpusy/presets/vctk/: constructor.py  missings.py  vctk.py
speechcorpusy/presets/zr19/: zr19.py  zr19_items_unit.py  zr19_items_voice.py
