[tool.poetry]
name = "speechcorpusy"
version = "2.2.0"
description = "speechcorpusy - Python corpus handler & infrastructure"
authors = ["Tarepan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tarepan/speechcorpusy"


[tool.poetry.dependencies]
python = "^3.7"
fsspec = {version = ">=2021.5.0", extras = ["s3"]}
requests = "^2.25.1"
tqdm = "^4.54.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
librosa = "^0.9.2"
SoundFile = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  # This is opinionated
  "line-too-long",
]