[tool.poetry]
name = "speechcorpusy"
version = "5.2.0"
description = "speechcorpusy - Python corpus handler & infrastructure"
authors = ["Tarepan"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tarepan/speechcorpusy"


[tool.poetry.dependencies]
python = "^3.8"
# fsspec = {version = "2023.*", extras = ["s3"]}
fsspec = "2023.*"
requests = "^2.25.1"
tqdm = "4.*"

[tool.poetry.dev-dependencies]
pytest = "7.*"
librosa = "0.10.*"
SoundFile = "0.12.*"
numpy = "1.22.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  # This is opinionated
  "line-too-long",
]